# mazechain

./: .gitignore  .replit  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  index.html  maze_api  maze_engine  maze_node  maze_test  maze_test.cpp  mazechain_api  replit.md  replit.nix  run.sh  wordlist.txt
api/: main.cpp  server.py
include/: README.md  block.h  blockchain.h  chainparams.h  checkpoints.h  coins.h  crypto.h  db_integrity.h  difficulty.h  mempool_audit.h  mempool_limit.h  mempool_limite.h  mining_utils.h  node_manager.h  p2p.h  policy.h  pow.h  script.h  storage.h  transaction.h  tx_verify.h  utxo.h  validation.h  wallet.h
include/consensus/: params.h  tx_check.cpp
src/: block.cpp  blockchain.cpp  chainparams.cpp  checkpoints.cpp  coins.cpp  crypto.cpp  db_integrity.cpp  main.cpp  main_core.cpp  mempool_limit.cpp  mempool_limite.cpp  node_manager.cpp  p2p.cpp  policy.cpp  pow.cpp  script.cpp  storage.cpp  transaction.cpp  tx_verify.cpp  utxo.cpp  validation.cpp  wallet.cpp
src/node/: miner.cpp  miner.h
web/: index.html
